--- a/temp.tex
+++ b/temp.tex
@@ -16,7 +16,7 @@
 \usepackage{listings,caption}
 \usepackage{fontspec,subfigure,float}
 \usepackage{verbatim}
-\setmainfont{WenQuanYi Micro Hei}
+\setmainfont{Source Code Pro}
 %\usepackage{xeCJK}%字體(Chinese/Japanese/Korean)
 %\setCJKmainfont{Droid Sans Fallback}
 
