--- a/temp.tex
+++ b/temp.tex
@@ -17,6 +17,7 @@
 \usepackage{fontspec,subfigure,float}
 \usepackage{verbatim}
 \setmainfont{Source Code Pro}
+\setmonofont{Source Code Pro}
 %\usepackage{xeCJK}%字體(Chinese/Japanese/Korean)
 %\setCJKmainfont{Droid Sans Fallback}
 
