add cjk support

--- a/temp.tex
+++ b/temp.tex
@@ -18,8 +18,12 @@
 \usepackage{verbatim}
 \setmainfont{Source Code Pro}
 \setmonofont{Source Code Pro}
-%\usepackage{xeCJK}%字體(Chinese/Japanese/Korean)
-%\setCJKmainfont{Droid Sans Fallback}
+\ExplSyntaxOn
+\bool_new:N \l__xeCJK_listings_letter_bool
+\ExplSyntaxOff
+\usepackage{xeCJK}%字體(Chinese/Japanese/Korean)
+\setCJKmainfont{WenQuanYi Micro Hei}
+\setCJKmonofont{WenQuanYi Micro Hei Mono}
 
 \lstset{
     tabsize=4,
